<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:isScrollContainer="true">
        <!--Title-->
        <TextView
            android:id="@+id/detail_page_movie_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_title_item"
            style="@style/ItemTextViewStyle" />
        <!--Image-->
        <ImageView
            android:id="@+id/detail_page_movie_image"
            android:src="@drawable/ic_ondemand_video_black_24dp"
            style="@style/ItemImageStyle"/>
        <!--Description-->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="10dp"
            android:scrollbars="horizontal"
            android:isScrollContainer="true">
            <TextView
                android:id="@+id/detail_page_movie_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_description_item"
                style="@style/ItemTextViewStyle" />
        </LinearLayout>
        <!--Ranking-->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:orientation="horizontal"
            android:padding="10dp"
            android:scrollbars="horizontal"
            android:isScrollContainer="true">
            <TextView
                android:id="@+id/detail_page_movie_rankingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_ranking_label"
                style="@style/ItemTextViewStyle" />
            <TextView
                android:id="@+id/detail_page_movie_ranking_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_ranking_item"
                style="@style/ItemTextViewStyle" />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginTop="30dp"
            android:scrollbars="horizontal"
            android:isScrollContainer="true">
            <Button
                android:id="@+id/detail_page_movie_trailer_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_ondemand_video_black_24dp"
                android:text="@string/detail_movie_trailer" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>

